--- a/app/src/main/res/layout/aboutme_fragment_settings.xml
+++ b/app/src/main/res/layout/aboutme_fragment_settings.xml
@@ -5,21 +5,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/fl_aboutme_container_upper"
-        android:layout_width="match_parent"
-        android:layout_height="210dp" />
-
-    <FrameLayout
-        android:id="@+id/fl_aboutme_container_lower"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="210dp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="我是设置页面"
+        android:textSize="24sp" />
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_in_aboutme"
+        android:id="@+id/toolbarSettings"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
         app:titleTextAppearance="@style/Toolbar_TextAppearance_White" />
