--- a/app/src/main/res/layout/aboutme_fragment_avatar.xml
+++ b/app/src/main/res/layout/aboutme_fragment_avatar.xml
@@ -5,9 +5,22 @@
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_avatar" />
+        android:src="@drawable/orange"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="0dp" />
+
+    <TextView
+        android:id="@+id/user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="55dp"
+        android:text="-  用户名  -"
+        android:textColor="@color/icons" />
+
 </FrameLayout>
