--- a/app/src/main/res/layout/aboutme_fragment_settings.xml
+++ b/app/src/main/res/layout/aboutme_fragment_settings.xml
@@ -1,16 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:ignore="ScrollViewCount">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="60dp"
+                android:background="?attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_comment_black_24dp"
+                android:drawablePadding="16dp"
+                android:drawableRight="@drawable/fragmentation_ic_right"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+
+                android:text="新消息提醒"
+                android:textSize="16sp" />
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="我是设置页面"
-        android:textSize="24sp" />
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="2dp"
+        android:background="?attr/selectableItemBackground"
+        android:drawableLeft="@drawable/ic_notifications_black_24dp"
+        android:drawablePadding="16dp"
+        android:drawableRight="@drawable/fragmentation_ic_right"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="勿扰模式"
+        android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="?attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_send_black_24dp"
+                android:drawablePadding="16dp"
+                android:drawableRight="@drawable/fragmentation_ic_right"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="聊天"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="?attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_view_headline_black_24dp"
+                android:drawablePadding="16dp"
+                android:drawableRight="@drawable/fragmentation_ic_right"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="通用"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="?attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_person_black_24dp"
+                android:drawablePadding="16dp"
+                android:drawableRight="@drawable/fragmentation_ic_right"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="账户与安全"
+                android:textSize="16sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/divider"></View>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="?attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_panorama_fish_eye_black_24dp"
+                android:drawablePadding="16dp"
+                android:drawableRight="@drawable/fragmentation_ic_right"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="清除缓存"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="?attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_loyalty_black_24dp"
+                android:drawablePadding="16dp"
+                android:drawableRight="@drawable/fragmentation_ic_right"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="帮助与反馈"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="2dp"
+                android:background="?attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_link_black_24dp"
+                android:drawablePadding="16dp"
+                android:drawableRight="@drawable/fragmentation_ic_right"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="退出登录"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </ScrollView>
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarSettings"
