--- a/app/src/main/res/layout/fragment_edit_thingwanted.xml
+++ b/app/src/main/res/layout/fragment_edit_thingwanted.xml
@@ -3,18 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_back_black_36dp" />
+        <include
+            layout="@layout/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="45dp" />
 
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
         <EditText
             android:id="@+id/title_textview"
             android:layout_width="match_parent"
@@ -54,12 +56,12 @@
 
         <com.hdl.mricheditor.view.MRichEditor
             android:id="@+id/mre_editor"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:background="#FFF" />
     </LinearLayout>
-
+    </LinearLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/submit_button"
         android:layout_width="100dp"
