--- a/app/src/main/res/layout/fragment_timeline_pager_first.xml
+++ b/app/src/main/res/layout/fragment_timeline_pager_first.xml
@@ -17,10 +17,11 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recy"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipChildren="false"
-            android:paddingLeft="-12dp"
-            android:paddingRight="-12dp" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="0dp"
+            android:clipChildren="false" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
