--- a/app/src/main/res/layout/fragment_timeline_pager_other.xml
+++ b/app/src/main/res/layout/fragment_timeline_pager_other.xml
@@ -5,10 +5,18 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="接单"
-        android:textSize="48sp" />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="0dp"
+            android:clipChildren="false" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
