--- a/app/src/main/res/layout/item_wanted_in_square.xml
+++ b/app/src/main/res/layout/item_wanted_in_square.xml
@@ -24,7 +24,7 @@
             android:layout_height="60dp"
             android:layout_gravity="center"
             android:paddingRight="5dp"
-            android:src="@drawable/almond_blossoms" />
+            android:src="@drawable/nopic" />
 
         <LinearLayout
             android:layout_width="match_parent"
